# myvlessbottg

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v2.4.1.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_REPORT.md  CRITICAL_DATA_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_v2.4.1.md  ISSUES_AND_RECOMMENDATIONS.md  QUICK_REFERENCE.md  QUICK_START_v2.4.1.md  QUICK_UPDATE_CHEATSHEET.md  QWEN.md  README.md  README_v2.4.0_FOR_YOU.md  RELEASE_NOTES_v2.4.0.md  RELEASE_SUMMARY_v2.4.1.md  UBUNTU_UPDATE_GUIDE.md  docker-compose.yml  install.sh  migration_guide.md  pyproject.toml  v2.4.0_COMPLETE_REPORT.md  v2.4.0_DOCUMENTATION_INDEX.md  v2.4.0_VERIFICATION_CHECKLIST.md  ИТОГИ_v2.4.0.md  ИТОГИ_v2.4.1_РУССКИЙ.md
.agent/workflows/: deploy_update.md
docs/: admin-panel.md  architecture.md  bot-flow.md  codebase-audit.md  deployment.md  env.md
scripts/: check_callbacks.py  check_fsm_transitions.py  check_host_cleanup.py  check_settings_defaults.py  cleanup.sh
src/shop_bot/: __main__.py  bot_controller.py  config.py  version.py
src/shop_bot/bot/: handlers.py  keyboards.py  middlewares.py  support_handlers.py
src/shop_bot/data_manager/: database.py  database_helpers.py  scheduler.py
src/shop_bot/modules/: mtg_api.py  xui_api.py
src/shop_bot/utils/: __init__.py  time_utils.py  update_manager.py
src/shop_bot/webhook_server/: app.py  issue_key_snippet.py  subscription_api.py
src/shop_bot/webhook_server/static/css/: style.css
src/shop_bot/webhook_server/static/js/: script.js
src/shop_bot/webhook_server/templates/: base.html  dashboard.html  debug_settings.html  keys.html  login.html  settings.html  updates.html  user_diagnostics.html  users.html
