[project]
name = "vless-shopbot"
version = "2.4.10"
authors = [{name = "Bogdan", email = "bogdan123456789101@gmail.com"}]
description = "Бот для автоматической продажи VLESS VPN"
dependencies = [
    "aiogram==3.21.0",
    "flask==3.1.1",
    "py3xui==0.4.0",
    "pyotp==2.9.0",
    "python-dotenv==1.1.1",
    "qrcode[pil]==8.2",
    "yookassa==3.5.0",
    "aiosend==2.1.2",
    "aiohttp==3.9.5",
    "aiohttp-sse-client==0.2.1",
    "pytonconnect==0.3.2",
    "pytz==2024.1",
    "waitress==3.0.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pylint",
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.json"]
